fixing radio btns on safari

--- a/src/scss/_learning-path.scss
+++ b/src/scss/_learning-path.scss
@@ -567,9 +567,9 @@
 			margin-top: 20px;
 		}
 		input[type="radio"] {
-			appearance: auto;
-			-webkit-appearance: auto;
-			-moz-appearance: auto;
+			appearance: radio;
+			-webkit-appearance: radio;
+			-moz-appearance: radio;
 			float: left;
 			height: 16px;
 			width: 16px;
